# az16-own-the-internet

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  inference.py  inference_notebook.ipynb  labels.ipynb  main.ipynb  main.py  notebook.ipynb  pyproject.toml  start.sh
.github/workflows/: porter_stack_az16-own-the-internet.yml
app/: app.py  demo.py  settings.py
frontend/: README.md  index.html  package-lock.json  tailwind.config.js
frontend/src/components/: MetricsDisplay.jsx  SearchForm.jsx  UserCard.jsx
frontend/src/pages/: Index.jsx  example-metrics.json  example-users.json
labelling/: inference.py
loader/: README.md  __init__.py  bm25.py  github_api.py  github_loader.py  inference.py  models.py  utils.py
processor/: inference.py
query-to-stacklist/: agent.py
search/: agent.py  examples.py  inference.py
tools/: bing_tool.py  extractor.py  llm.py  logger.py  scrapingbee_tool.py
