[tool.poetry]
name = "az16-own-the-internet"
version = "0.1.0"
description = ""
authors = ["DoctorSlimm <87606888+DoctorSlimm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
langchain = "^0.3.2"
langchain-community = "^0.3.1"
colorlog = "^6.8.2"
scrapingbee = "^2.0.1"
langchain-openai = "^0.2.2"
lxml = "^5.3.0"
markdownify = "^0.13.1"
langsmith = "^0.1.131"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
